프로젝트 안정화 - Lombok 제거 - Crypto 정합화 - FFI 인프라 버그 수정 - 폐쇄망 TLS 세션 파사드 설계 골격 구현
2.0.0 릴리즈를 위한 준비 작업